--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="eu.elraro.ahorramas" >
 
-    <!-- To auto-complete the email text field in the login form with the user's emails -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.READ_PROFILE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -22,7 +17,13 @@
         </activity>
         <activity android:name=".MainMenuActivity" >
         </activity>
-        <activity android:name=".HelpActivity" >
+        <activity
+            android:name=".HelpActivity"
+            android:label="@string/title_help"
+            android:parentActivityName=".MainMenuActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="eu.elraro.ahorramas.MainMenuActivity" />>
         </activity>
         <activity
             android:name=".LoginActivity"
