--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,11 @@
         </activity>
         <activity android:name=".BuyActivity" >
         </activity>
-        <activity android:name=".ListTabBuyActivity" >
+        <activity android:name=".FinishBuyActivity"
+            android:parentActivityName=".MainMenuActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="eu.elraro.ahorramas.MainMenuActivity" />
         </activity>
     </application>
 
